# rsopt

./: .gitignore  .readthedocs.yml  README.md  pyproject.toml  setup.py
.github/workflows/: python-ci.yml
docs/: .gitignore  codes.rst  commands.rst  conf.py  configuration.rst  cori_warp_installation.txt  elegant.rst  examples.rst  index.rst  installation.rst  introduction.rst  job_dictionary.rst  options.rst  params_and_settings.rst  python.rst  quick_start.rst  requirements.txt  setup.rst  simulation_execution.rst  user.rst
docs/codes/: elegant.rst  genesis.rst  madx.rst  opal.rst  python.rst  user.rst
docs/examples/: aposmm.rst  chwirut.rst  elegant_parallel.rst  mobo.rst  multi.rst  quickstart.rst  radia_undulator.rst  sampler.rst
docs/optimizers/: aposmm.rst  dfols.rst  dlib.rst  mobo.rst  nlopt.rst  pysot.rst  scipy.rst
docs/samplers/: lh_scan.rst  mesh_scan.rst
examples/: run_libE_lhc_scan.py  run_libE_undulator_optimization.py  run_libE_undulator_optimization_km.py  run_libE_warp_processor_scan.py  run_libe_simple_efficiency_optimization.py  run_rsopt_configured_six_hump_camel.py  run_runner_s2e.py
examples/elegant_fodo_example/: README  fodo_opt.ele  fodo_opt.lte  fodo_opt.py  obj_fodo_opt.py  python_run.py
examples/elegant_matching_parallel_execution_example/: README  elegant.ele  elegant.lte  match_parallel.yml  obj_f_bunch_matching.py  preprocess.py
examples/libensemble_setup_examples/: README  run_libE_lhc_scan.py  run_libE_warp_processor_scan.py  run_libe_simple_efficiency_optimization.py
examples/madx_parameter_scan/: README  analyze_madx_scan.ipynb  config_madx.yml
examples/mobo_example/: README  config_mobo.yml  config_mobo_osy.yml  osy_function.py  plot_result.py  tnk_function.py
examples/multi_code_example/: README  config_run.yml  set_chicane_r56.py
examples/python_aposmm_example/: README  config_scan_six_hump_camel.yaml  config_scan_six_ump_camel.yaml  config_six_hump_camel.yaml  six_hump_camel.py
examples/python_basic_example/: run_rsopt_configured_six_hump_camel.py  run_runner_s2e.py  run_six_hump_camel_from_yaml.sh
examples/python_chwirut_example/: chwirut.py  config_chwirut.yaml
examples/spiffe/: config.yml  (+3 more)
rsopt/: __init__.py  __main__.py  analysis.py  configuration.py  conversion.py  environment.py  mpi.py  optimizer.py  optimizer_aposmm.py  parse.py  parse_sim.py  rsopt_console.py  run.py  simulation.py  util.py
tests/: conftest.py  import_test.py  test_configuration.py  test_configuration_validators.py  test_executors.py  test_generate_input_file.py  test_models.py  test_optimizer.py  test_python_simulation_function.py  test_run_strings.py  test_setup.py
(+209 files in other folders)
